src/styles.scss
/* You can add global styles to this file, and also import other style files */

html, body { height: 100%; }
body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }

h1, h2, h3, h4, h5, h6 {
  font-weight: 700;
}

h1 {
  font-size: 1.75em;
  margin: 0 0 0.75em;

  + custom-table {
    margin-top: 2.1875em;
  }
}

h2 {
  font-size: 1.5em;
  margin: 0.75em 0;
}

h3 {
  font-size: 1.1875em;
  margin: 1em 0;
}

.header-row {
  display: flex;
  align-items: center;
  justify-content: space-between;

  .actions {
    display: flex;
    align-items: center;
    gap: 10px;
  }
}

.snackbar-success {
  &.mat-mdc-snack-bar-container .mat-mdc-snackbar-surface {
    background-color: #2A652C;
  }
}

.snackbar-error {
  &.mat-mdc-snack-bar-container .mat-mdc-snackbar-surface {
    background-color: #A82424;
  }
}

.snackbar-warning {
  &.mat-mdc-snack-bar-container .mat-mdc-snackbar-surface {
    background-color: #A86500;
  }
}

.snackbar-error, .snackbar-success, .snackbar-warning {
  .mat-mdc-button {
    color: white !important;
  }
}

simple-snack-bar .mat-mdc-snack-bar-label {
  white-space: pre-line;
  word-break: break-word;
}

.mat-mdc-dialog-container-with-actions .mat-mdc-dialog-content {
  padding: var(--mat-dialog-content-padding, 20px 24px) !important;
}

.nav-link {
  display: flex;
  align-items: center;
  gap: 20px
}

publication-bundle .bundle-row .mat-mdc-form-field {
  --mat-form-field-outlined-disabled-input-text-color: rgba(26, 27, 31, 0.55);
}

